# tutorial_gaze-interface

./: .gitignore  CMakeLists.txt  README.md
app/scripts/: tutorial_gaze-interface-app.xml  tutorial_gaze-interface-system.xml
gazebo/models/ball/: model.config  model.sdf
gazebo/models/tutorial_gaze-interface-ball/: model.config  model.sdf
gazebo/worlds/: tutorial_gaze-interface.sdf
smoke-test/: CMakeLists.txt  test.cpp  test.sh  test.xml
smoke-test/fixtures/: fixture.xml
src/: detector.cpp  mover.cpp  tracker.cpp
